--- a/src/views/contract/z-contract/index.html
+++ b/src/views/contract/z-contract/index.html
@@ -114,6 +114,7 @@
                     <li value="9">退款中</li>
                     <li value="1">待签约</li>
                     <li value="7">已退租</li>
+                    <li value="12">已续租</li>
                 </ul>
                 <div class="layui-tab-content" style="padding:0px;margin:0px;">
                     <table id="zcontract-index-table" lay-filter="demoEvent"></table>
