--- a/src/views/house/h-house/edit.html
+++ b/src/views/house/h-house/edit.html
@@ -187,6 +187,7 @@ img {
                             <option value="主卧">主卧</option>
                             <option value="次卧" >次卧</option>
                             <option value="一室一厅" >一室一厅</option>
+                            <option value="二室一厅" >二室一厅</option>
                             <option value="三室一厅" >三室一厅</option>
                     </select>  
                </div> 
