--- a/src/views/contract/z-contract/view.html
+++ b/src/views/contract/z-contract/view.html
@@ -76,19 +76,19 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">姓名</label>
                         <div class="layui-input-inline" style="width: 144px;">
-                            <input type="tel" name="Name" lay-verify="required" placeholder="必填" value="{{d[2].Name}}" autocomplete="off" class="layui-input" id="Name">
+                            <input type="tel" name="Name" lay-verify="required" placeholder="必填" value="{{d[2].Name}}" autocomplete="off" disabled class="layui-input gray">
                         </div>
                     </div>
                     <div class="layui-inline">
                         <label class="layui-form-label" >手机号</label>
                         <div class="layui-input-inline" style="width: 150px;">
-                            <input type="tel" name="Phone" lay-verify="required" autocomplete="off" value="{{d[2].Phone}}" class="layui-input" id="Phone" placeholder="必填">
+                            <input type="tel" name="Phone" lay-verify="required" autocomplete="off" value="{{d[2].Phone}}" class="layui-input gray"  disabled id="Phone" placeholder="必填">
                         </div>
                     </div>   
                     <div class="layui-inline">
                         <label class="layui-form-label" >证件信息</label>
                         <div class="layui-input-inline" style="width:90px;margin-right:0px;">
-                            <select  id="DocumentType" name="DocumentType" placeholder="选填">
+                            <select  id="DocumentType" name="DocumentType" >
                                 <option value="0">身份证</option>
                                 <option value="1">军官证</option>
                                 <option value="2">护照</option>
@@ -96,7 +96,7 @@
                             </select>
                         </div>
                         <div class="layui-input-inline" style="width:150px;">
-                            <input type="tel" name="Document"  value="" placeholder="选填" autocomplete="off" class="layui-input" id="Document">
+                            <input type="tel" name="Document" disabled  value=""  autocomplete="off" class="layui-input gray" id="Document">
                         </div>
                     </div>
                     </div>
@@ -114,7 +114,7 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">工作</label>
                         <div class="layui-input-inline" style="width:150px;">
-                            <select lay-verify="" id="Work" name="Work">
+                            <select lay-verify="" id="Work" name="Work" disabled >
                                     <option value="">请选择</option>
                                 {{#  layui.each(d.work, function(index, item1){ }}
                                 <option value="{{item1.Value}}">{{item1.Value}}</option>
@@ -139,7 +139,7 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">微信</label>
                         <div class="layui-input-inline" style="width:150px;">
-                            <input type="tel" name="Social" lay-verify="" autocomplete="off" value="{{doc.ns(d[2].Social)}}" class="layui-input" id="Social" placeholder="选填">
+                            <input type="tel" disabled  name="Social" lay-verify="" autocomplete="off" value="{{doc.ns(d[2].Social)}}" disabled class="layui-input gray" id="Social" >
                         </div>
                     </div>
                 </div>
@@ -151,11 +151,11 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">合同时间</label>
                         <div class="layui-input-inline" style="width:200px;">
-                            <input type="tel" name="BeginTime" lay-verify="required" value="{{util.toDateString(d[1].BeginTime, 'yyyy-MM-dd')}}" autocomplete="off" class="layui-input" id="BeginTime" placeholder="合同开始时间">
+                            <input type="tel" disabled name="BeginTime" lay-verify="required" value="{{util.toDateString(d[1].BeginTime, 'yyyy-MM-dd')}}" autocomplete="off" class="layui-input gray"  placeholder="合同开始时间">
         
                         </div>
                         <div class="layui-input-inline" style="width:200px;">
-                            <input type="tel" name="EndTime" lay-verify="EndTime"   value="{{util.toDateString(d[1].EndTime, 'yyyy-MM-dd')}}" autocomplete="off" class="layui-input" id="EndTime" placeholder="合同结束时间">
+                            <input type="tel" disabled name="EndTime" lay-verify="EndTime"   value="{{util.toDateString(d[1].EndTime, 'yyyy-MM-dd')}}" autocomplete="off" class="layui-input gray" placeholder="合同结束时间">
                         </div>
                     </div>
                 </div>
@@ -163,26 +163,17 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">类型</label>
                         <div class="layui-input-inline" style="width: 100px;">
-                            <select lay-verify="required" id="Type" name="Type">
-                                <option value="1">月租</option>
-                                {{#  layui.each(d[0].type, function(index, item1){ }}
-                                  <option value="{{item1.Value}}">{{item1.Value}}</option>
-                                {{#  });   }}
+                            <select  id="viewyType"  name="Type">
+                                <option value="2">月租</option>
+                                <option value="1">日租</option>
                             </select>
                         </div>
-                        <label class="layui-form-label" >付款方式</label>
+                        <label class="layui-form-label" >支付时间</label>
                         <div class="layui-input-inline" style="width: 100px;">
-                            <select lay-verify="required" id="PinLv" name="PinLv">
-                                <option value="">请选择</option>
-                               
-                                {{#  layui.each(d[0].pinlv, function(index, item1){ }}
-                                <option value="{{item1.key}}">{{item1.Value}}</option>
-                                {{#  });   }}
-                            </select>
+                            <input type="tel" disabled   lay-verify="" autocomplete="off" value="{{doc.ns(d[1].Pinlv)}}月1付" class="layui-input"  >
                         </div>
-                       
                         <div class="layui-input-inline" style="width: 100px;">
-                            <select lay-verify="required" id="DepositType" name="DepositType">
+                            <select lay-verify="required" id="viewDepositType" name="DepositType" disabled>
                                     <option value="">押几</option>
                                     <option value="1">押一</option>
                                     <option value="2">押二</option>
@@ -197,14 +188,14 @@
                     <div class="layui-inline">
                         <label class="layui-form-label">支付时间</label>
                         <div class="layui-input-inline" style="width:200px;">
-                            <select lay-verify="required" id="Recivetype" name="Recivetype" lay-filter="Recivetype">
+                            <select lay-verify="required" id="viewRecivetype" name="Recivetype" lay-filter="Recivetype" disabled>
                                 <option value="1">按账单开始时间提前收租</option>
                                 <option value="2">按固定日期收租</option>
                             </select>
                         </div>
                         
                         <div class="layui-input-inline" style="width:100px;" id="howtian">
-                                <select lay-verify="required" id="BeforeDay" name="BeforeDay">
+                                <select lay-verify="required" id="viewBeforeDay" name="BeforeDay" disabled>
                                     <option value="0">0天</option>
                                     <option value="1">1天</option>
                                     <option value="2">2天</option>
@@ -212,42 +203,27 @@
                             </div>                          
                         <label class="layui-form-label">月租金</label>
                         <div class="layui-input-inline" style="width: 100px;">
-                            <input type="tel" name="Recent" lay-verify="required|number" autocomplete="off" class="layui-input" value="{{d[1].Recent}}" id="Recent">
+                            <input type="tel" name="Recent" lay-verify="required|number" disabled autocomplete="off" class="layui-input gray" value="{{d[1].Recent}}" >
                         </div>
                     </div>
                 </div>
-                <div class="layui-form-item">
-                        <label class="layui-form-label">杂费</label>
-                        <div class="layui-input-block">
-                            {{#  layui.each(d[0].zafei, function(index, item1){ if(item1.IsYajin==0){ }}
-                            
-                                <input type="checkbox"  name="{{item1.Name}}" title="{{item1.Name}}" lay-filter="zafei" ztype="{{item1.Type}}" zyajin="{{item1.IsYajin}}">
-                            {{# } });   }}
-                        </div>
-                   </div>
-                 <div class="zafeicontent">
+                
+                 <div class="viewzafeicontent">
         
                  </div>
-                 <div class="layui-form-item">
-                        <label class="layui-form-label">其他押金</label>
-                        <div class="layui-input-block">
-                            {{#  layui.each(d[0].zafei, function(index, item1){ if(item1.IsYajin==1){ }}
-                                <input type="checkbox" name="{{item1.Name}}" title="{{item1.Name}}" lay-filter="yajin" ztype="{{item1.Type}}" zyajin="{{item1.IsYajin}}">
-                            {{#  } });   }}
-                        </div>
-                      </div>
-                      <div class="yajincontent">
+             
+                 <div class="viewyajincontent">
             
                 </div>
                  <div class="layui-form-item">
                         <div class="layui-inline">
                     <label class="layui-form-label">创建人</label>
-                    <div class="layui-input-inline" style="width: 100px;">
-                        <input type="tel" name="CreatePerson" autocomplete="off" class="layui-input gray" disabled id="Remark">
+                    <div class="layui-input-inline" style="width: 150px;">
+                        <input type="tel" name="CreatePerson" autocomplete="off" value="{{d[1].CreatePerson}}" class="layui-input gray" disabled id="Remark">
                     </div>
                     <label class="layui-form-label">创建时间</label>
-                    <div class="layui-input-inline" style="width: 100px;">
-                        <input type="tel" name="CreateTime" autocomplete="off" class="layui-input gray" disabled id="Remark">
+                    <div class="layui-input-inline" style="width: 150px;">
+                        <input type="tel" name="CreateTime" autocomplete="off" value="{{d[1].CreateTime}}" class="layui-input gray" disabled id="Remark">
                     </div>
                 </div>
                 </div>
@@ -255,7 +231,7 @@
                         <div class="layui-form-item">
                             <label class="layui-form-label">备注</label>
                             <div class="layui-input-block">
-                                <input type="tel" name="Remark" autocomplete="off" class="layui-input" id="Remark">
+                                <input type="tel" name="Remark" autocomplete="off" class="layui-input gray" disabled id="Remark">
                             </div>
                         </div>
                     </div>
