--- a/src/views/house/z-house/add.html
+++ b/src/views/house/z-house/add.html
@@ -319,7 +319,7 @@ img {
                        <div class="layui-inline"> 
                         <label class="layui-form-label">门牌号</label> 
                         <div class="layui-input-inline"> 
-                         <input type="text" name="RoomId" autocomplete="off"  lay-verify="required|number"  class="layui-input"  /> 
+                         <input type="text" name="RoomId" autocomplete="off"  lay-verify="required"  class="layui-input"  /> 
                         </div> 
                        </div> 
                        
