--- a/src/views/msystem/adress/index.html
+++ b/src/views/msystem/adress/index.html
@@ -62,7 +62,9 @@
     </div>
     <div class="layui-tab layui-tab-card" lay-filter="tabletab">
         <ul class="layui-tab-title" style="margin-bottom:0;">
-            <li value="999" class="layui-this">所有</li>
+            <li value="0" class="layui-this">所有</li>
+            <li value="4">门店</li>
+            <li value="5" >大区</li>
         </ul>
         <div class="layui-tab-content" style="padding:0px;margin:0px;">
             <table id="sysuser-table" lay-filter="demoEvent"></table>
